--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 hadoop-1.2.1.tar.gz filter=lfs diff=lfs merge=lfs -text
+jdk-7u79-linux-i586.tar.gz filter=lfs diff=lfs merge=lfs -text
+jdk-7u79-linux-x64.tar.gz filter=lfs diff=lfs merge=lfs -text
